--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ img {
 .header {
   padding-top: 24px;
   padding-bottom: 25px;
-  border: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
 }
 
 .container {
@@ -208,7 +208,6 @@ img {
 }
 /* ----------------------------WORK----------------- */
 .work {
-  padding-top: 94px;
   padding-bottom: 94px;
 }
 
@@ -244,6 +243,7 @@ img {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-color);
+  margin-bottom: 50px;
 }
 
 .team-item {
@@ -251,7 +251,6 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  margin-top: 50px;
 }
 
 .team-name {
@@ -261,7 +260,6 @@ img {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-color);
-  padding-top: 30px;
 }
 .team-job {
   font-size: 16px;
@@ -269,11 +267,17 @@ img {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--pale-color);
+  padding-top: 10px;
+}
+
+.team-member {
+  padding-top: 30px;
   padding-bottom: 30px;
 }
 
 /* --------------------FOOTER----------------- */
-.footer {
+
+footer {
   background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
@@ -304,12 +308,16 @@ img {
   letter-spacing: 0.03em;
   color: var(--secondary-color);
 }
+
+.address-list {
+  margin-top: 9px;
+}
+
 .address-item {
   font-size: 14px;
   line-height: calc(24 / 14);
   letter-spacing: 0.03em;
   color: var(--address-color);
-  padding-top: 9px;
 }
 
 /* ------------------------PORTFOLIO--------------------------------- */
@@ -322,6 +330,7 @@ img {
   align-items: center;
   text-align: center;
   gap: 8px;
+  margin-bottom: 20px;
 }
 
 .portfolio-btn:hover,
@@ -356,24 +365,23 @@ img {
   padding: 6px 22px;
 }
 
-/* ----------------------PROJECTS------------------------------ */
-.project {
-  margin-top: 34px;
-}
 .project-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
+
+.project {
+  padding: 20px 24px;
+}
+
 .project-item {
   background: var(--main-background-color);
   border: 1px solid #eeeeee;
   width: 370px;
-  height: 404px;
-  padding-bottom: 94px;
-  width: calc(100%-1170) / 3;
-  margin-bottom: 30px;
+  margin-top: 30px;
 }
+
 .project-item:nth-last-child(-n + 3) {
   margin-bottom: 94px;
 }
@@ -384,7 +392,6 @@ img {
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--main-color);
-  margin-top: 20px;
 }
 .project-text {
   font-size: 16px;
